; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_calculate_crc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_calculate_crc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64, i32 }

@PNG_FLAG_CRC_ANCILLARY_MASK = common dso_local global i32 0, align 4
@PNG_FLAG_CRC_ANCILLARY_USE = common dso_local global i32 0, align 4
@PNG_FLAG_CRC_ANCILLARY_NOWARN = common dso_local global i32 0, align 4
@PNG_FLAG_CRC_CRITICAL_IGNORE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @png_calculate_crc(%struct.TYPE_3__* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  store i32 1, i32* %7, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = call i64 @PNG_CHUNK_ANCILLARY(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %27

15:                                               ; preds = %3
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = load i32, i32* @PNG_FLAG_CRC_ANCILLARY_MASK, align 4
  %20 = and i32 %18, %19
  %21 = load i32, i32* @PNG_FLAG_CRC_ANCILLARY_USE, align 4
  %22 = load i32, i32* @PNG_FLAG_CRC_ANCILLARY_NOWARN, align 4
  %23 = or i32 %21, %22
  %24 = icmp eq i32 %20, %23
  br i1 %24, label %25, label %26

25:                                               ; preds = %15
  store i32 0, i32* %7, align 4
  br label %26

26:                                               ; preds = %25, %15
  br label %36

27:                                               ; preds = %3
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = load i32, i32* @PNG_FLAG_CRC_CRITICAL_IGNORE, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %35

34:                                               ; preds = %27
  store i32 0, i32* %7, align 4
  br label %35

35:                                               ; preds = %34, %27
  br label %36

36:                                               ; preds = %35, %26
  %37 = load i32, i32* %7, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %71

39:                                               ; preds = %36
  %40 = load i64, i64* %6, align 8
  %41 = icmp sgt i64 %40, 0
  br i1 %41, label %42, label %71

42:                                               ; preds = %39
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  %45 = load i64, i64* %44, align 8
  store i64 %45, i64* %8, align 8
  br label %46

46:                                               ; preds = %64, %42
  %47 = load i64, i64* %6, align 8
  store i64 %47, i64* %9, align 8
  %48 = load i64, i64* %9, align 8
  %49 = icmp eq i64 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %46
  store i64 -1, i64* %9, align 8
  br label %51

51:                                               ; preds = %50, %46
  %52 = load i64, i64* %8, align 8
  %53 = load i32, i32* %5, align 4
  %54 = load i64, i64* %9, align 8
  %55 = call i64 @crc32(i64 %52, i32 %53, i64 %54)
  store i64 %55, i64* %8, align 8
  %56 = load i64, i64* %9, align 8
  %57 = load i32, i32* %5, align 4
  %58 = sext i32 %57 to i64
  %59 = add nsw i64 %58, %56
  %60 = trunc i64 %59 to i32
  store i32 %60, i32* %5, align 4
  %61 = load i64, i64* %9, align 8
  %62 = load i64, i64* %6, align 8
  %63 = sub nsw i64 %62, %61
  store i64 %63, i64* %6, align 8
  br label %64

64:                                               ; preds = %51
  %65 = load i64, i64* %6, align 8
  %66 = icmp sgt i64 %65, 0
  br i1 %66, label %46, label %67

67:                                               ; preds = %64
  %68 = load i64, i64* %8, align 8
  %69 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %70 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %69, i32 0, i32 1
  store i64 %68, i64* %70, align 8
  br label %71

71:                                               ; preds = %67, %39, %36
  ret void
}

declare dso_local i64 @PNG_CHUNK_ANCILLARY(i32) #1

declare dso_local i64 @crc32(i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
